package es.uvigo.esei.dagss.facturaaas.entidades;

public enum EstadoFactura {
    EMITIDA, PAGADA, ANULADA, RECLAMADA, ABONADA;
}
