package es.uvigo.esei.dagss.facturaaas.entidades;


public enum EstadoPago {
    PENDIENTE, PAGADO, ANULADO;
}
