package es.uvigo.esei.dagss.facturaaas.entidades;


public enum RolUsuario {
    USUARIO,
    ADMINISTRADOR;
}
