package es.uvigo.esei.dagss.facturaaas.entidades;

public enum TipoFacturacion {
        PARTICULAR, AUTONOMO, SOCIEDAD_LIMITADA, SOCIEDAD_ANONIMA, COOPERATIVA, ONG, OTROS;
}
